[package]
name = "talpa"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Tunnel route manager"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
